# pscrap

./: .gitignore  CMakeLists.txt  Toolchain.cmake
cmake/: FindJSON-C.cmake
include/: p_curl.h  p_levenshtein.h  p_movie.h  p_search.h
source/: p_curl.cpp  p_levenshtein.cpp  p_movie.cpp  p_search.cpp
test/: main.cpp  main.h
